--- a/EduProject.ipynb
+++ b/EduProject.ipynb
@@ -152,7 +152,82 @@
         "id": "xEqQoV3alr4D"
       },
       "source": [
-        ""
+        "class Student:\r\n",
+        "    def __init__(self, mbti, Name, DOB, Age):\r\n",
+        "        self.mbti = mbti\r\n",
+        "        self.Name = Name\r\n",
+        "        self.DOB = DOB\r\n",
+        "        self.Age = Age"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vAsU_5E1MIIc"
+      },
+      "source": [
+        "s1 = Student(12, \"Bilal\", \"10-10-2002\", 18)"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jSlSNC8DYYIg",
+        "outputId": "2ca32286-5f51-40df-c464-2eb1b2e21297"
+      },
+      "source": [
+        "print(s1.Name, s1.Age, s1.DOB, s1.mbti)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Bilal 18 10-10-2002 12\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yG5mrPakYifu"
+      },
+      "source": [
+        "class Subject:\r\n",
+        "     def get_data(self):\r\n",
+        "        intelligence = list(input(\"Enter the intelligence parameters for each subject in order: \\n\"))\r\n",
+        "        interest = list(input(\"Enter the interrest parameters for each subject in order: \\n\"))"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KvBsGtKIa7bD"
+      },
+      "source": [
+        "english = Subject()"
+      ],
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5kzAi2KXbAse"
+      },
+      "source": [
+        "englus"
       ],
       "execution_count": null,
       "outputs": []
