--- a/interest_/test.ipynb
+++ b/interest_/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "ovOo4C0zSwSL"
    },
@@ -19,10 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "OeH67debS-Lq"
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -31,27 +29,35 @@
     "ocean_perc = pd.read_csv(r\"resources\\ocean\\ocean_perc.csv\",index_col=0)\n",
     "\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "train_ocean = ocean_perc[:102078]\n",
     "train_riasec = riasec_perc[:102078]\n",
-    "\n",
+    "train_data = data[:102078]\n",
     "# test_ocean = ocean_perc[102078:116,660] # Incorrect way of range \n",
     "# test_riasec = riasec_perc[102078:116,660]\n",
     "\n",
     "\n",
     "test_ocean_1 = ocean_perc[116660:]\n",
     "test_riasec_1 = riasec_perc[116660:]\n",
-    "\n",
-    "\n",
-    "\n"
+    "test_data_1 = data[116660:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0         50.0\n1         35.0\n2         22.5\n3         37.5\n4         32.5\n          ... \n102073    25.0\n102074    25.0\n102075    52.5\n102076    42.5\n102077    37.5\nName: Realistic, Length: 102078, dtype: float64, 0         1\n1         1\n2         2\n3         2\n4         2\n         ..\n102073    2\n102074    1\n102075    1\n102076    1\n102077    2\nName: gender, Length: 102078, dtype: int64]\n"
+     ]
+    }
+   ],
+   "source": [
+    "R_x = [train_riasec['Realistic'],train_data['gender']]\n",
+    "print(R_x)"
    ]
   },
   {
@@ -60,52 +66,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = train_ocean[['Openness','Conscientiousness','Extraversion','Agreeableness','Neuroticism']]\n",
-    "y = train_riasec[['Realistic','Investigative','Artistic','Social','Enterprising','Conventional']]\n",
-    "\n",
-    "# y = test_riasec['Realistic']\n",
-    "regr = linear_model.LinearRegression()\n",
-    "regr.fit(x, y)\n",
-    "\n",
-    "riasec_pred = regr.predict(test_ocean_1)\n",
-    "\n",
-    "from sklearn.metrics import r2_score\n",
-    "r2 = r2_score(test_riasec_1,riasec_pred)\n",
-    "print(r2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "R_x = train_riasec[['Realistic']]\n",
+    "R_x = train_riasec[['Realistic']]+train_data[['gender']]\n",
     "O_y = n.squeeze(train_ocean['Openness'])\n",
     "\n",
     "regr.fit(R_x, O_y)\n",
     "R_test = test_riasec_1[['Realistic']]\n",
     "\n",
     "O_pred = regr.predict(test_ocean_1[['Openness']].to_numpy())\n",
-    "print(O_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(O_pred)\n",
+    "\n",
     "R2 = r2_score(test_ocean_1['Openness'],O_pred)\n",
     "print(R2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
