final of the day

--- a/interest_/test.ipynb
+++ b/interest_/test.ipynb
@@ -122,20 +122,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 105,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVR()\n"
+      "SGDRegressor()\n",
+      "[81.93214305 78.49479235 77.81932213 ... 86.94780143 77.18395696\n",
+      " 78.38774025] \n",
+      "\n",
+      "-0.002980901533924829\n",
+      "BayesianRidge()\n",
+      "[79.5367958  76.52870102 77.4274588  ... 81.19059055 79.14288726\n",
+      " 78.53549758] \n",
+      "\n",
+      "0.02239106347399833\n",
+      "LassoLars()\n",
+      "[77.67484529 77.67484529 77.67484529 ... 77.67484529 77.67484529\n",
+      " 77.67484529] \n",
+      "\n",
+      "-2.5093248966712167e-05\n",
+      "ARDRegression()\n",
+      "[79.53616014 76.52222457 77.42694035 ... 81.18543091 79.15212258\n",
+      " 78.5388572 ] \n",
+      "\n",
+      "0.022393519953040175\n",
+      "PassiveAggressiveRegressor()\n",
+      "[34.25393746 48.82043451 42.02698057 ... 30.72789711 29.99818229\n",
+      " 35.66085264] \n",
+      "\n",
+      "-5.335151395280149\n",
+      "TheilSenRegressor(max_subpopulation=10000)\n",
+      "[80.79877951 77.83692218 79.18186352 ... 81.58256659 81.57223311\n",
+      " 80.46139455] \n",
+      "\n",
+      "0.008653487017137862\n",
+      "LinearRegression()\n",
+      "[79.53897848 76.52777053 77.42720506 ... 81.19495003 79.14402255\n",
+      " 78.53628674] \n",
+      "\n",
+      "0.022397423198896926\n"
      ]
     }
    ],
    "source": [
     "classifiers = [\n",
-    "    svm.SVR(),\n",
+    "    # svm.SVR(),\n",
     "    linear_model.SGDRegressor(),\n",
     "    linear_model.BayesianRidge(),\n",
     "    linear_model.LassoLars(),\n",
@@ -151,6 +187,16 @@
     "    print(clf.predict(test_riasec_1[['Realistic','Social']]),'\\n')\n",
     "    R2 = r2_score(test_ocean_1['Openness'],clf.predict(test_riasec_1[['Realistic','Social']]))\n",
     "    print(R2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaling = MinMaxScaler(feature_range=(-1,1)).fit(X_train)"
    ]
   },
   {
