--- a/interest_/train_test.ipynb
+++ b/interest_/train_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "ovOo4C0zSwSL"
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "OeH67debS-Lq"
    },
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.0595219425076556\n"
+     ]
+    }
+   ],
    "source": [
     "x = train_ocean[['Openness','Conscientiousness','Extraversion','Agreeableness','Neuroticism']]\n",
     "y = train_riasec[['Realistic','Investigative','Artistic','Social','Enterprising','Conventional']]\n",
-    "\n",
+    "from sklearn import linear_model\n",
     "# y = test_riasec['Realistic']\n",
     "regr = linear_model.LinearRegression()\n",
     "regr.fit(x, y)\n",
@@ -76,9 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[77.0071441  76.79105289 77.0071441  ... 77.1151897  77.2232353\n 76.79105289]\n"
+     ]
+    }
+   ],
    "source": [
     "R_x = train_riasec[['Realistic']]\n",
     "O_y = n.squeeze(train_ocean['Openness'])\n",
@@ -92,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "-0.03189065357502918\n"
+     ]
+    }
+   ],
    "source": [
     "R2 = r2_score(test_ocean_1['Openness'],O_pred)\n",
     "print(R2)"
@@ -128,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.0-final"
   }
  },
  "nbformat": 4,
